<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="1000dp"
        android:layout_height="400dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txvUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:text="@string/str_security"
            android:textColor="#6ab136"
            android:textSize="55sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="@string/str_give_me_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:textSize="35sp" />

        <ToggleButton
            android:id="@+id/tgbLock"
            android:layout_width="400dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textOff="@string/str_text_off"
            android:textOn="@string/str_text_on"
            android:textSize="35sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/light_blue_button_shape"
            android:text="@string/str_cancel"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
