<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/txvUserName"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:text="@string/str_security"
                android:textColor="#6ab136"
                android:textSize="55sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_edittext"
                android:ems="10" android:textColor="@android:color/darker_gray"
                android:hint="@string/str_give_me_password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="35sp" />

            <ToggleButton
                android:id="@+id/tgbLock"
                android:layout_width="400dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textOff="@string/str_text_off"
                android:textOn="@string/str_text_on"
                android:textSize="35sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/light_blue_button_shape"
                    android:text="@string/str_submit"
                    android:textColor="#ffffff"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnSecurityActiveDeactive"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/light_blue_button_shape"
                    android:text="@string/str_security_deactive"
                    android:textColor="#ffffff"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/light_blue_button_shape"
                    android:text="@string/str_cancel"
                    android:textColor="#ffffff"
                    android:textSize="50sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn7"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="7"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn8"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="8"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn9"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="9"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="4"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn5"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="5"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn6"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="6"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="1"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="2"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="3"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn0"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="0"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnBack"
                        android:layout_width="185dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="Delete"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
