<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vapestore.vaperetailer.SendToEmailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txvSendToPhone"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/str_sendTophone"
                android:textColor="#0e5ba9"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/edtSendToPhone"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:inputType="phone"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColor="#0e5ba9"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/light_blue_button_shape"
                    android:text="@string/str_send"
                    android:textColor="#ffffff"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnCancle"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/light_blue_button_shape"
                    android:text="@string/str_cancel"
                    android:textColor="#ffffff"
                    android:textSize="50sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn7"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="7"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn8"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="8"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn9"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="9"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="4"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn5"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="5"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn6"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="6"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="1"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="2"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="3"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn0"
                        android:layout_width="90dp"
                        android:layout_height="90dp"

                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="0"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnPlus"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="+"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnBack"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:background="@drawable/keyboard_light_blue_button_shape"
                        android:text="Del"
                        android:textColor="#ffffff"
                        android:textSize="50sp"
                        android:textStyle="bold" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
